# SimplePC

./: .gitignore  CMakeLists.txt  EVM_report.docx  cpu.c  cpu.h  evk.bas  fact.asm  fact.bas  interface.c  interface.h  main.c
bigChars/: makefile
bigChars/test/: main.c
hardDisk/: main - copy.c  main.c  mbr.c  mbr.h
readKey/: myReadKey.c
readKey/test/: main
simpleComputer/: makefile  mySimpleComputer.c  mySimpleComputer.h
term/: makefile
transale/: CMakeLists.txt  asm.c  asm.h  basic.c  basic.h
transale/transale/: rpn.c  rpn.h
